testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_multi_line_string/case6.expect.out
error: unterminated single-line string
  ==> case6.cj:16:14:
   | 
16 |     cangjie2 ${ "
   |                 ^^ unterminated single-line string
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

1 error generated, 1 error printed.
